--- a/nbs/03a_anatel.ipynb
+++ b/nbs/03a_anatel.ipynb
@@ -50,30 +50,27 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "import os\n",
     "import shutil\n",
     "import urllib.request\n",
-    "from zipfile import ZipFile\n",
-    "from typing import List, Tuple\n",
     "from functools import cached_property\n",
+    "from typing import List\n",
+    "from zipfile import ZipFile\n",
+    "\n",
+    "import geopandas as gpd\n",
     "import pandas as pd\n",
     "from dotenv import find_dotenv, load_dotenv\n",
-    "from fastcore.xtras import Path\n",
-    "from fastcore.parallel import parallel, partialler\n",
     "from fastcore.foundation import L\n",
-    "from pyarrow import ArrowInvalid\n",
-    "import geopandas as gpd\n",
+    "from fastcore.parallel import parallel\n",
+    "from fastcore.xtras import Path\n",
     "\n",
-    "\n",
-    "from extracao.datasources.sitarweb import Stel, Radcom, SQLSERVER_PARAMS\n",
-    "from extracao.datasources.mosaico import MONGO_URI\n",
-    "from extracao.datasources.srd import SRD\n",
-    "from extracao.datasources.telecom import Telecom\n",
-    "from extracao.datasources.smp import SMP\n",
-    "from extracao.datasources.base import Base\n",
+    "from extracao.constants import COLUNAS, IBGE_MUNICIPIOS, IBGE_POLIGONO, MALHA_IBGE\n",
     "from extracao.datasources.aeronautica import Aero\n",
-    "from extracao.datasources.connectors import SQLServer\n",
-    "from extracao.constants import COLUNAS, IBGE_MUNICIPIOS, IBGE_POLIGONO, MALHA_IBGE"
+    "from extracao.datasources.base import Base\n",
+    "from extracao.datasources.mosaico import MONGO_URI\n",
+    "from extracao.datasources.sitarweb import SQLSERVER_PARAMS, Radcom, Stel\n",
+    "from extracao.datasources.smp import SMP\n",
+    "from extracao.datasources.srd import SRD\n",
+    "from extracao.datasources.telecom import Telecom"
    ]
   },
   {
@@ -119,12 +116,10 @@
     "\t\tsql_params: dict = SQLSERVER_PARAMS,\n",
     "\t\tmongo_uri: str = MONGO_URI,\n",
     "\t\tlimit: int = 0,\n",
-    "\t\tn_workers: int = 10,\n",
     "\t):\n",
     "\t\tself.sql_params = sql_params\n",
     "\t\tself.mongo_uri = mongo_uri\n",
     "\t\tself.limit = limit\n",
-    "\t\tself.n_workers = n_workers\n",
     "\n",
     "\t@property\n",
     "\tdef columns(self):\n",
@@ -151,18 +146,14 @@
     "\t@cached_property\n",
     "\tdef extraction(self) -> L:\n",
     "\t\tsources = [\n",
-    "\t\t\t# Aero(),\n",
+    "\t\t\tAero(),\n",
     "\t\t\tStel(self.sql_params),\n",
     "\t\t\tRadcom(self.sql_params),\n",
     "\t\t\tSRD(self.mongo_uri),\n",
     "\t\t\tTelecom(self.mongo_uri, self.limit),\n",
     "\t\t\tSMP(self.mongo_uri, self.limit),\n",
     "\t\t]\n",
-    "\t\t# result = []\n",
-    "\t\t# for s in sources:\n",
-    "\t\t#     print(repr(s))\n",
-    "\t\t#     result.append(self._update_instance(s))\n",
-    "\t\t# return result\n",
+    "\n",
     "\t\treturn parallel(Outorgadas._update_instance, sources, n_workers=len(sources), progress=True)\n",
     "\n",
     "\t@staticmethod\n",
@@ -252,6 +243,19 @@
     "\t\treturn points_with_regions\n",
     "\n",
     "\tdef validate_coordinates(self, df: pd.DataFrame, check_municipio: bool = True) -> pd.DataFrame:\n",
+    "\t\t\"\"\"\n",
+    "\t\tValidates the coordinates in the given DataFrame.\n",
+    "\n",
+    "\t\tArgs:\n",
+    "\t\t        df: The DataFrame containing the coordinates to be validated.\n",
+    "\t\t        check_municipio: A boolean indicating whether to check the municipality information (default: True).\n",
+    "\n",
+    "\t\tReturns:\n",
+    "\t\t        pd.DataFrame: The DataFrame with validated coordinates.\n",
+    "\n",
+    "\t\tRaises:\n",
+    "\t\t        None\n",
+    "\t\t\"\"\"\n",
     "\t\tself.verify_shapefile_folder()\n",
     "\t\tif check_municipio:\n",
     "\t\t\tdf = self.fill_nan_coordinates(df)\n",
@@ -263,7 +267,7 @@
     "\t) -> pd.DataFrame:  # Processed DataFrame\n",
     "\t\taero = self.validate_coordinates(dfs.pop(0), False)\n",
     "\t\tanatel = self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
-    "\t\treturn pd.concat(aero, anatel, ignore_index=True).sort_values(\n",
+    "\t\treturn pd.concat([aero, anatel], ignore_index=True).sort_values(\n",
     "\t\t\t['Frequência', 'Latitude', 'Longitude'], ignore_index=True\n",
     "\t\t)"
    ]
