--- a/nbs/02a_icao.ipynb
+++ b/nbs/02a_icao.ipynb
@@ -59,6 +59,7 @@
     "\n",
     "import pandas as pd\n",
     "from dotenv import find_dotenv, load_dotenv\n",
+    "from extracao.constants import FILES\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
@@ -86,9 +87,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "COLS_NAV = [\"Frequency\", \"Latitude\", \"Longitude\", \"Facility\", \"Location\", \"NS\", \"WE\"]\n",
-    "COLS_COM = [\"Frequency\", \"CoordLat\", \"CoordLong\", \"DOC\", \"Location\", \"NS\", \"WE\"]\n",
-    "UNIQUE_COLS = [\"Frequency\", \"Latitude\", \"Longitude\"]"
+    "COLS_NAV = ['Frequency', 'Latitude', 'Longitude', 'Facility', 'Location', 'NS', 'WE']\n",
+    "COLS_COM = ['Frequency', 'CoordLat', 'CoordLong', 'DOC', 'Location', 'NS', 'WE']\n",
+    "UNIQUE_COLS = ['Frequency', 'Latitude', 'Longitude']\n"
    ]
   },
   {
@@ -99,26 +100,22 @@
    "source": [
     "#| export\n",
     "def convert_latitude(\n",
-    "    lat: str,  # Latitude\n",
-    "    hemisphere: str,  # Hemisfério: N | S\n",
+    "\tlat: str,  # Latitude\n",
+    "\themisphere: str,  # Hemisfério: N | S\n",
     ") -> float:\n",
-    "    \"\"\"Converte a Latitude para formato decimal\"\"\"\n",
-    "    multiplier = 1 if hemisphere == \"N\" else -1\n",
-    "    return multiplier * (\n",
-    "        float(lat[:2]) + float(lat[3:5]) / 60 + float(lat[6:8]) / 3600.0\n",
-    "    )\n",
+    "\t\"\"\"Converte a Latitude para formato decimal\"\"\"\n",
+    "\tmultiplier = 1 if hemisphere == 'N' else -1\n",
+    "\treturn multiplier * (float(lat[:2]) + float(lat[3:5]) / 60 + float(lat[6:8]) / 3600.0)\n",
     "\n",
     "\n",
     "def convert_longitude(\n",
-    "    lon: str,  # Longitude\n",
-    "    hemisphere: str,  # Hemisfério: W | E\n",
+    "\tlon: str,  # Longitude\n",
+    "\themisphere: str,  # Hemisfério: W | E\n",
     ") -> float:\n",
-    "    \"\"\"Converte a longitude para formato decimal\"\"\"\n",
+    "\t\"\"\"Converte a longitude para formato decimal\"\"\"\n",
     "\n",
-    "    multiplier = 1 if hemisphere == \"E\" else -1\n",
-    "    return multiplier * (\n",
-    "        float(lon[1:3]) + float(lon[4:6]) / 60 + float(lon[7:9]) / 3600.0\n",
-    "    )"
+    "\tmultiplier = 1 if hemisphere == 'E' else -1\n",
+    "\treturn multiplier * (float(lon[1:3]) + float(lon[4:6]) / 60 + float(lon[7:9]) / 3600.0)\n"
    ]
   },
   {
@@ -150,21 +147,17 @@
    "source": [
     "#|export\n",
     "def _read_df(\n",
-    "    path: str,  # Caminho do arquivo\n",
-    "    usecols: Iterable[str],  # Subconjunto de colunas do arquivo\n",
+    "\tpath: str,  # Caminho do arquivo\n",
+    "\tusecols: Iterable[str],  # Subconjunto de colunas do arquivo\n",
     ") -> pd.DataFrame:  # Dataframe formatado\n",
-    "    # sourcery skip: use-fstring-for-concatenation\n",
-    "    \"\"\"Lê o DataFrame no caminho `path`, filtra as colunas `usecols` e o retorna formatado\"\"\"\n",
-    "    df = pd.read_csv(path, dtype=\"string\")[usecols]\n",
-    "    df.columns = COLS_NAV\n",
-    "    df[\"Latitude\"] = df.apply(\n",
-    "        lambda x: convert_latitude(x[\"Latitude\"], x[\"NS\"]), axis=1\n",
-    "    )\n",
-    "    df[\"Longitude\"] = df.apply(\n",
-    "        lambda x: convert_longitude(x[\"Longitude\"], x[\"WE\"]), axis=1\n",
-    "    )\n",
-    "    df[\"Description\"] = \"[ICAO] \" + df.Facility + \", \" + df.Location\n",
-    "    return df[[\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]]"
+    "\t# sourcery skip: use-fstring-for-concatenation\n",
+    "\t\"\"\"Lê o DataFrame no caminho `path`, filtra as colunas `usecols` e o retorna formatado\"\"\"\n",
+    "\tdf = pd.read_csv(path, dtype='string')[usecols]\n",
+    "\tdf.columns = COLS_NAV\n",
+    "\tdf['Latitude'] = df.apply(lambda x: convert_latitude(x['Latitude'], x['NS']), axis=1)\n",
+    "\tdf['Longitude'] = df.apply(lambda x: convert_longitude(x['Longitude'], x['WE']), axis=1)\n",
+    "\tdf['Description'] = '[ICAO] ' + df.Facility + ', ' + df.Location\n",
+    "\treturn df[['Frequency', 'Latitude', 'Longitude', 'Description']]\n"
    ]
   },
   {
@@ -175,31 +168,29 @@
    "source": [
     "#| export\n",
     "def map_channels(\n",
-    "    df: pd.DataFrame,  # DataFrame dos dados de origem\n",
-    "    origem: str,  # Descrição da emissão a ser substituída\n",
+    "\tdf: pd.DataFrame,  # DataFrame dos dados de origem\n",
+    "\torigem: str,  # Descrição da emissão a ser substituída\n",
     ") -> pd.DataFrame:\n",
-    "    \"\"\"Mapeia os canais contidos em `df` e adiciona os registros ILS/DME caso houver\"\"\"\n",
-    "    chs = pd.read_csv(\n",
-    "        f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_CHANNELS\"]}',\n",
-    "        dtype=\"string\",\n",
-    "    )\n",
-    "    for row in df[df.Description.str.contains(\"ILS|DME\")].itertuples():\n",
-    "        if not (ch := chs[(chs.VOR_ILSloc == row.Frequency)]).empty:\n",
-    "            for i, c in enumerate(ch.values[0][2:]):\n",
-    "                if pd.notna(c):\n",
-    "                    if i == 0:\n",
-    "                        freq_type = \"ILS glide path\"\n",
-    "                    elif i == 1:\n",
-    "                        freq_type = \"Airbone DME\"\n",
-    "                    elif i == 2:\n",
-    "                        freq_type = \"Ground-based DME\"\n",
-    "                    else:\n",
-    "                        raise ValueError(\"No additional frequency to map on channel\")\n",
-    "                    description = (\n",
-    "                        f\"{row.Description.replace(origem , 'DOC')} ({freq_type})\"\n",
-    "                    )\n",
-    "                    df.loc[len(df)] = [c, row.Latitude, row.Longitude, description]\n",
-    "    return df"
+    "\t\"\"\"Mapeia os canais contidos em `df` e adiciona os registros ILS/DME caso houver\"\"\"\n",
+    "\tchs = pd.read_csv(\n",
+    "\t\tFILES / 'VHF_NAV.csv',\n",
+    "\t\tdtype='string[pyarrow]',\n",
+    "\t)\n",
+    "\tfor row in df[df.Description.str.contains('ILS|DME')].itertuples():\n",
+    "\t\tif not (ch := chs[(chs.VOR_ILSloc == row.Frequency)]).empty:\n",
+    "\t\t\tfor i, c in enumerate(ch.values[0][2:]):\n",
+    "\t\t\t\tif pd.notna(c):\n",
+    "\t\t\t\t\tif i == 0:\n",
+    "\t\t\t\t\t\tfreq_type = 'ILS glide path'\n",
+    "\t\t\t\t\telif i == 1:\n",
+    "\t\t\t\t\t\tfreq_type = 'Airbone DME'\n",
+    "\t\t\t\t\telif i == 2:\n",
+    "\t\t\t\t\t\tfreq_type = 'Ground-based DME'\n",
+    "\t\t\t\t\telse:\n",
+    "\t\t\t\t\t\traise ValueError('No additional frequency to map on channel')\n",
+    "\t\t\t\t\tdescription = f\"{row.Description.replace(origem , 'DOC')} ({freq_type})\"\n",
+    "\t\t\t\t\tdf.loc[len(df)] = [c, row.Latitude, row.Longitude, description]\n",
+    "\treturn df\n"
    ]
   },
   {
@@ -209,17 +200,13 @@
    "outputs": [],
    "source": [
     "#| export    \n",
-    "def get_icao() -> (\n",
-    "    pd.DataFrame\n",
-    "):  # DataFrame com frequências, coordenadas e descrição das estações\n",
-    "    \"\"\"Lê, concatena e pós-processa os arquivos do ICAO\"\"\"\n",
-    "    path_nav: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_NAV\"]}'\n",
-    "    path_com: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_COM\"]}'\n",
-    "    df = pd.concat(\n",
-    "        _read_df(p, c) for p, c in zip([path_nav, path_com], [COLS_NAV, COLS_COM])\n",
-    "    )\n",
-    "    df = df.astype(\"string\")\n",
-    "    return map_channels(df, \"ICAO\").drop_duplicates(UNIQUE_COLS, ignore_index=True)"
+    "def get_icao() -> pd.DataFrame:  # DataFrame com frequências, coordenadas e descrição das estações\n",
+    "\t\"\"\"Lê, concatena e pós-processa os arquivos do ICAO\"\"\"\n",
+    "\tpath_nav: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_NAV\"]}'\n",
+    "\tpath_com: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_COM\"]}'\n",
+    "\tdf = pd.concat(_read_df(p, c) for p, c in zip([path_nav, path_com], [COLS_NAV, COLS_COM]))\n",
+    "\tdf = df.astype('string')\n",
+    "\treturn map_channels(df, 'ICAO').drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
   },
   {
