Validação de Coordenadas local funcional

--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -54,6 +54,9 @@
     "ESTACAO = 'http://sistemas.anatel.gov.br/se/public/view/b/srd.php?wfid=estacoes&id={}'\n",
     "MALHA_IBGE = 'https://geoftp.ibge.gov.br/organizacao_do_territorio/malhas_territoriais/malhas_municipais/municipio_2022/Brasil/BR/BR_Municipios_2022.zip'\n",
     "FILES = Path(__file__).parent / 'datasources' / 'arquivos'\n",
+    "PATH_NAV = FILES / 'VHF_NAV.csv'\n",
+    "PATH_COM = FILES / 'VHF_COM.csv'\n",
+    "VOR_ILS_DME = FILES / 'VOR_ILS_DME_Channel.csv'\n",
     "CHANNELS = FILES / 'canalizacao_smp.csv'\n",
     "IBGE_MUNICIPIOS = FILES / 'municipios.csv'\n",
     "IBGE_POLIGONO = FILES / 'BR_Municipios_2022' / 'BR_Municipios_2022.shp'"
