--- a/nbs/03a_anatel.ipynb
+++ b/nbs/03a_anatel.ipynb
@@ -146,12 +146,12 @@
     "\t@cached_property\n",
     "\tdef extraction(self) -> L:\n",
     "\t\tsources = [\n",
-    "\t\t\tAero(),\n",
-    "\t\t\tStel(self.sql_params),\n",
-    "\t\t\tRadcom(self.sql_params),\n",
-    "\t\t\tSRD(self.mongo_uri),\n",
     "\t\t\tTelecom(self.mongo_uri, self.limit),\n",
     "\t\t\tSMP(self.mongo_uri, self.limit),\n",
+    "\t\t\tSRD(self.mongo_uri),\n",
+    "\t\t\t# Stel(self.sql_params),\n",
+    "\t\t\t# Radcom(self.sql_params),\n",
+    "\t\t\tAero(),\n",
     "\t\t]\n",
     "\n",
     "\t\treturn parallel(Outorgadas._update_instance, sources, n_workers=len(sources), progress=True)\n",
@@ -160,16 +160,19 @@
     "\tdef verify_shapefile_folder():\n",
     "\t\t# Convert the file paths to Path objects\n",
     "\t\tshapefile_path = Path(IBGE_POLIGONO)\n",
-    "\t\tzip_file_path = shapefile_path.parent.with_suffix('.zip')\n",
+    "\t\tparent_folder = shapefile_path.parent\n",
+    "\t\tparent_folder.mkdir(exist_ok=True, parents=True)\n",
+    "\t\tzip_file_path = parent_folder.with_suffix('.zip')\n",
     "\n",
     "\t\t# Check if all required files exist\n",
     "\t\trequired_files = L('.cpg', '.dbf', '.prj', '.shx').map(shapefile_path.with_suffix)\n",
     "\t\tif not all(required_files.map(Path.is_file)):\n",
-    "\t\t\tshutil.rmtree(str(shapefile_path.parent), ignore_errors=True)\n",
+    "\t\t\t# shutil.rmtree(str(shapefile_path.parent), ignore_errors=True)\n",
+    "\t\t\tparent_folder.ls().map(Path.unlink)\n",
     "\t\t\t# Download and unzip the zipped folder\n",
     "\t\t\turllib.request.urlretrieve(MALHA_IBGE, zip_file_path)\n",
     "\t\t\twith ZipFile(zip_file_path, 'r') as zip_ref:\n",
-    "\t\t\t\tzip_ref.extractall(shapefile_path.parent.parent)\n",
+    "\t\t\t\tzip_ref.extractall(parent_folder)\n",
     "\t\t\tzip_file_path.unlink()\n",
     "\n",
     "\tdef fill_nan_coordinates(\n",
@@ -211,6 +214,7 @@
     "\n",
     "\tdef intersect_coordinates_on_poligon(self, df: pd.DataFrame, check_municipio: bool = True):\n",
     "\t\tregions = gpd.read_file(IBGE_POLIGONO)\n",
+    "\n",
     "\t\t# Convert pandas dataframe to geopandas df with geometry point given coordinates\n",
     "\t\tgdf_points = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df.Longitude, df.Latitude))\n",
     "\n",
@@ -265,8 +269,8 @@
     "\t\tself,\n",
     "\t\tdfs: List,  # List with the individual API sources\n",
     "\t) -> pd.DataFrame:  # Processed DataFrame\n",
-    "\t\taero = self.validate_coordinates(dfs.pop(0), False)\n",
-    "\t\tanatel = self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
+    "\t\t# aero = self.validate_coordinates(dfs.pop(), False)\n",
+    "\t\treturn self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
     "\t\treturn pd.concat([aero, anatel], ignore_index=True).sort_values(\n",
     "\t\t\t['Frequência', 'Latitude', 'Longitude'], ignore_index=True\n",
     "\t\t)"
