--- a/nbs/02a_icao.ipynb
+++ b/nbs/02a_icao.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "import pandas as pd\n",
     "from dotenv import find_dotenv, load_dotenv\n",
-    "from extracao.constants import FILES\n",
+    "from extracao.constants import PATH_NAV, PATH_COM, VOR_ILS_DME\n",
     "\n",
     "load_dotenv(find_dotenv(), override=True)"
    ]
@@ -172,10 +172,7 @@
     "\torigem: str,  # Descrição da emissão a ser substituída\n",
     ") -> pd.DataFrame:\n",
     "\t\"\"\"Mapeia os canais contidos em `df` e adiciona os registros ILS/DME caso houver\"\"\"\n",
-    "\tchs = pd.read_csv(\n",
-    "\t\tFILES / 'VHF_NAV.csv',\n",
-    "\t\tdtype='string[pyarrow]',\n",
-    "\t)\n",
+    "\tchs = pd.read_csv(VOR_ILS_DME, dtype='string[pyarrow]', dtype_backend='pyarrow')\n",
     "\tfor row in df[df.Description.str.contains('ILS|DME')].itertuples():\n",
     "\t\tif not (ch := chs[(chs.VOR_ILSloc == row.Frequency)]).empty:\n",
     "\t\t\tfor i, c in enumerate(ch.values[0][2:]):\n",
@@ -202,9 +199,7 @@
     "#| export    \n",
     "def get_icao() -> pd.DataFrame:  # DataFrame com frequências, coordenadas e descrição das estações\n",
     "\t\"\"\"Lê, concatena e pós-processa os arquivos do ICAO\"\"\"\n",
-    "\tpath_nav: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_NAV\"]}'\n",
-    "\tpath_com: str = f'{Path(__file__).resolve().parent}/{os.environ[\"PATH_COM\"]}'\n",
-    "\tdf = pd.concat(_read_df(p, c) for p, c in zip([path_nav, path_com], [COLS_NAV, COLS_COM]))\n",
+    "\tdf = pd.concat(_read_df(p, c) for p, c in zip([PATH_NAV, PATH_COM], [COLS_NAV, COLS_COM]))\n",
     "\tdf = df.astype('string')\n",
     "\treturn map_channels(df, 'ICAO').drop_duplicates(UNIQUE_COLS, ignore_index=True)"
    ]
