Added more filters when querying the MongoDB

--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -134,7 +134,6 @@
     "\n",
     "AGG_LICENCIAMENTO = [\n",
     "\t'Frequência',\n",
-    "\t'Entidade',\n",
     "\t'Fistel',\n",
     "\t'Código_Município',\n",
     "\t'Longitude',\n",
@@ -497,6 +496,9 @@
     "\t\t{'NumServico': {'$nin': ['010', '045', '171', '450', '750', '', None]}},\n",
     "\t\t{'FreqTxMHz': {'$nin': [None, '', 0], '$type': 1.0}},\n",
     "\t\t{'CodMunicipio': {'$nin': [None, '']}},\n",
+    "\t\t{'NumFistel': {'$nin': [None, '']}},\n",
+    "\t\t{'CodTipoClasseEstacao': {'$nin': [None, '']}},\n",
+    "\t\t{'DesignacaoEmissao': {'$nin': [None, '']}},\n",
     "\t]\n",
     "}\n",
     "\n",
@@ -519,6 +521,10 @@
     "\t\t{'NumServico': '010'},\n",
     "\t\t{'FreqTxMHz': {'$nin': [None, '', 0], '$type': 1.0}},\n",
     "\t\t{'CodMunicipio': {'$nin': [None, '']}},\n",
+    "\t\t{'NumFistel': {'$nin': [None, '']}},\n",
+    "\t\t{'CodTipoClasseEstacao': {'$nin': [None, '']}},\n",
+    "\t\t{'DesignacaoEmissao': {'$nin': [None, '']}},\n",
+    "\t\t{'Tecnologia': {'$nin': [None, '']}},\n",
     "\t]\n",
     "}"
    ]
