--- a/nbs/03a_anatel.ipynb
+++ b/nbs/03a_anatel.ipynb
@@ -149,8 +149,8 @@
     "\t\t\tTelecom(self.mongo_uri, self.limit),\n",
     "\t\t\tSMP(self.mongo_uri, self.limit),\n",
     "\t\t\tSRD(self.mongo_uri),\n",
-    "\t\t\t# Stel(self.sql_params),\n",
-    "\t\t\t# Radcom(self.sql_params),\n",
+    "\t\t\tStel(self.sql_params),\n",
+    "\t\t\tRadcom(self.sql_params),\n",
     "\t\t\tAero(),\n",
     "\t\t]\n",
     "\n",
@@ -222,20 +222,20 @@
     "\t\tgdf_points.crs = regions.crs\n",
     "\n",
     "\t\t# Spatial join points to the regions\n",
-    "\t\tpoints_with_regions = gpd.sjoin(gdf_points, regions, how='inner', predicate='within')\n",
+    "\t\tgdf = gpd.sjoin(gdf_points, regions, how='inner', predicate='within')\n",
     "\n",
     "\t\tif check_municipio:\n",
     "\t\t\t# Check correctness of Coordinates\n",
-    "\t\t\tcheck_coords = points_with_regions.Código_Município != points_with_regions.CD_MUN\n",
+    "\t\t\tcheck_coords = gdf.Código_Município != gdf.CD_MUN\n",
     "\n",
     "\t\t\tlog = \"\"\"[(\"Colunas\", [\"Código_Município\", \"Município\", \"UF\"]),\n",
     "\t\t\t\t\t(\"Processamento\", \"Informações substituídas  pela localização correta das coordenadas.\")\t\t      \n",
     "\t\t\t\t\"\"\"\n",
-    "\t\t\tself.register_log(points_with_regions, log, check_coords)\n",
+    "\t\t\tself.register_log(gdf, log, check_coords)\n",
     "\n",
-    "\t\t\tpoints_with_regions.drop(['Código_Município', 'Município', 'UF'], axis=1, inplace=True)\n",
+    "\t\t\tgdf.drop(['Código_Município', 'Município', 'UF'], axis=1, inplace=True)\n",
     "\n",
-    "\t\tpoints_with_regions.rename(\n",
+    "\t\tgdf.rename(\n",
     "\t\t\tcolumns={\n",
     "\t\t\t\t'CD_MUN': 'Código_Município',\n",
     "\t\t\t\t'NM_MUN': 'Município',\n",
@@ -244,7 +244,7 @@
     "\t\t\tinplace=True,\n",
     "\t\t)\n",
     "\n",
-    "\t\treturn points_with_regions\n",
+    "\t\treturn gdf\n",
     "\n",
     "\tdef validate_coordinates(self, df: pd.DataFrame, check_municipio: bool = True) -> pd.DataFrame:\n",
     "\t\t\"\"\"\n",
@@ -269,11 +269,12 @@
     "\t\tself,\n",
     "\t\tdfs: List,  # List with the individual API sources\n",
     "\t) -> pd.DataFrame:  # Processed DataFrame\n",
-    "\t\t# aero = self.validate_coordinates(dfs.pop(), False)\n",
-    "\t\treturn self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
-    "\t\treturn pd.concat([aero, anatel], ignore_index=True).sort_values(\n",
+    "\t\taero = self.validate_coordinates(dfs.pop(), False)\n",
+    "\t\tanatel = self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
+    "\t\tdf = pd.concat([aero, anatel], ignore_index=True).sort_values(\n",
     "\t\t\t['Frequência', 'Latitude', 'Longitude'], ignore_index=True\n",
-    "\t\t)"
+    "\t\t)\n",
+    "\t\treturn df.loc[:, self.columns]"
    ]
   },
   {
