--- a/nbs/03b_aero.ipynb
+++ b/nbs/03b_aero.ipynb
@@ -78,7 +78,7 @@
    ],
    "source": [
     "#| export\n",
-    "load_dotenv(find_dotenv())\n"
+    "load_dotenv(find_dotenv())"
    ]
   },
   {
@@ -98,51 +98,53 @@
    "source": [
     "#|export\n",
     "class Aero(Base):\n",
-    "\t\"\"\"Classe auxiliar para agregar os dados das APIs aeronáuticas\"\"\"\n",
+    "    \"\"\"Classe auxiliar para agregar os dados das APIs aeronáuticas\"\"\"\n",
     "\n",
-    "\t@property\n",
-    "\tdef stem(self):\n",
-    "\t\treturn 'aero'\n",
+    "    @property\n",
+    "    def stem(self):\n",
+    "        return \"aero\"\n",
     "\n",
-    "\t@property\n",
-    "\tdef columns(self):\n",
-    "\t\treturn ['Frequency', 'Latitude', 'Longitude', 'Description']\n",
+    "    @property\n",
+    "    def columns(self):\n",
+    "        return [\"Frequency\", \"Latitude\", \"Longitude\", \"Description\"]\n",
     "\n",
-    "\t@cached_property\n",
-    "\tdef extraction(self) -> pd.DataFrame:\n",
-    "\t\tfunc = lambda f: f()\n",
-    "\t\tradares = pd.read_csv(Path(__file__).parent / 'arquivos' / 'radares.csv')\n",
-    "\t\tsources = [get_icao, get_aisw, get_aisg, get_redemet]\n",
-    "\t\tdfs = parallel(func, sources, threadpool=True, progress=True)\n",
-    "\t\tdfs.append(radares)\n",
-    "\t\treturn dfs\n",
+    "    @cached_property\n",
+    "    def extraction(self) -> pd.DataFrame:\n",
+    "        func = lambda f: f()\n",
+    "        radares = pd.read_csv(Path(__file__).parent / \"arquivos\" / \"radares.csv\")\n",
+    "        sources = [get_icao, get_aisw, get_aisg, get_redemet]\n",
+    "        dfs = parallel(func, sources, threadpool=True, progress=True)\n",
+    "        dfs.append(radares)\n",
+    "        return dfs\n",
     "\n",
-    "\tdef _format(\n",
-    "\t\tself,\n",
-    "\t\tdfs: List,  # List with the individual API sources\n",
-    "\t) -> pd.DataFrame:  # Processed DataFrame\n",
-    "\t\tif dfs:\n",
-    "\t\t\ticao = dfs.pop(0)\n",
-    "\t\t\tfor df in dfs:\n",
-    "\t\t\t\ticao = merge_on_frequency(icao, df)\n",
+    "    def _format(\n",
+    "        self,\n",
+    "        dfs: List,  # List with the individual API sources\n",
+    "    ) -> pd.DataFrame:  # Processed DataFrame\n",
+    "        if dfs:\n",
+    "            icao = dfs.pop(0)\n",
+    "            for df in dfs:\n",
+    "                icao = merge_on_frequency(icao, df)\n",
     "\n",
-    "\t\t\ticao = icao.sort_values(by=icao.columns.to_list(), ignore_index=True)\n",
-    "\t\t\ticao = icao.drop_duplicates(\n",
-    "\t\t\t\tsubset=['Frequency', 'Latitude', 'Longitude'],\n",
-    "\t\t\t\tkeep='last',\n",
-    "\t\t\t\tignore_index=True,\n",
-    "\t\t\t)\n",
-    "\t\t\ticao = icao.astype(\n",
-    "\t\t\t\t{\n",
-    "\t\t\t\t\t'Frequency': 'float64',\n",
-    "\t\t\t\t\t'Latitude': 'float32',\n",
-    "\t\t\t\t\t'Longitude': 'float32',\n",
-    "\t\t\t\t\t'Description': 'string',\n",
-    "\t\t\t\t}\n",
-    "\t\t\t)\n",
-    "\t\t\ticao.loc[np.isclose(icao.Longitude, -472.033447), 'Longitude'] = -47.2033447\n",
-    "\t\t\ticao.loc[np.isclose(icao.Longitude, 69.934998), 'Longitude'] = -69.934998\n",
-    "\t\t\treturn icao.rename(columns={'Frequency': 'Frequência', 'Description': 'Entidade'})\n"
+    "            icao = icao.sort_values(by=icao.columns.to_list(), ignore_index=True)\n",
+    "            icao = icao.drop_duplicates(\n",
+    "                subset=[\"Frequency\", \"Latitude\", \"Longitude\"],\n",
+    "                keep=\"last\",\n",
+    "                ignore_index=True,\n",
+    "            )\n",
+    "            icao = icao.astype(\n",
+    "                {\n",
+    "                    \"Frequency\": \"float64\",\n",
+    "                    \"Latitude\": \"float32\",\n",
+    "                    \"Longitude\": \"float32\",\n",
+    "                    \"Description\": \"string\",\n",
+    "                }\n",
+    "            )\n",
+    "            icao.loc[np.isclose(icao.Longitude, -472.033447), \"Longitude\"] = -47.2033447\n",
+    "            icao.loc[np.isclose(icao.Longitude, 69.934998), \"Longitude\"] = -69.934998\n",
+    "            return icao.rename(\n",
+    "                columns={\"Frequency\": \"Frequência\", \"Description\": \"Entidade\"}\n",
+    "            )"
    ]
   },
   {
@@ -310,18 +312,18 @@
    ],
    "source": [
     "#| export\n",
-    "if __name__ == '__main__':\n",
-    "\tprint(f'{50*\"=\"}ICAO{50*\"=\"}')\n",
-    "\ticao = get_icao()\n",
-    "\tdisplay(icao)\n",
-    "\tprint(f'{50*\"=\"}AISWEB{50*\"=\"}')\n",
-    "\t# aisw = get_aisw()\n",
-    "\t# display(aisw)\n",
-    "\tprint(f'{50*\"=\"}AISGEO{50*\"=\"}')\n",
-    "\taisg = get_aisg()\n",
-    "\tprint(f'{50*\"=\"}REDEMET{50*\"=\"}')\n",
-    "\tredemet = get_redemet()\n",
-    "\tdisplay(redemet)"
+    "if __name__ == \"__main__\":\n",
+    "    print(f'{50*\"=\"}ICAO{50*\"=\"}')\n",
+    "    icao = get_icao()\n",
+    "    display(icao)\n",
+    "    print(f'{50*\"=\"}AISWEB{50*\"=\"}')\n",
+    "    # aisw = get_aisw()\n",
+    "    # display(aisw)\n",
+    "    print(f'{50*\"=\"}AISGEO{50*\"=\"}')\n",
+    "    aisg = get_aisg()\n",
+    "    print(f'{50*\"=\"}REDEMET{50*\"=\"}')\n",
+    "    redemet = get_redemet()\n",
+    "    display(redemet)"
    ]
   },
   {
